* The type string for the parameter $lang of DateFormatter::getInstance is
  removed (deprecated in 1.31).
* The EDIT_TOKEN_SUFFIX constant was removed (deprecated in 1.27).
  Use MediaWiki\Session\Token::SUFFIX instead.
* EditPage::isOouiEnabled() was removed (deprecated in 1.30).
* mw.util.wikiGetlink() was removed (deprecated in 1.23).
  Use mw.util.getUrl() instead.

=== Deprecations in 1.32 ===
* Use of a StartProfiler.php file is deprecated in favour of placing
  configuration in LocalSettings.php.
* HTMLForm::setSubmitProgressive() is deprecated. No need to call it. Submit
  button is already marked as progressive.

=== Other changes in 1.32 ===
* …

== Compatibility ==
MediaWiki 1.32 requires PHP 5.5.9 or later. Although HHVM 3.18.5 or later is supported,
it is generally advised to use PHP 5.5.9 or later for long term support.

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature. There is experimental support for
Oracle and Microsoft SQL Server.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.2 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later
* Microsoft SQL Server 2005 (9.00.1399)

== Upgrading ==
1.32 has several database changes since 1.31, and will not work without schema
updates. Note that due to changes to some very large tables like the revision
table, the schema update may take quite long (minutes on a medium sized site,
many hours on a large site).

Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions, including
important information when upgrading from versions prior to 1.11.

For notes on 1.31.x and older releases, see HISTORY.

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except