@@ -1,40 +1,0 @@
-<?php
-/**
- * Base code for update jobs that put some secondary data extracted
- * from article content into the database.
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along
- * with this program; if not, write to the Free Software Foundation, Inc.,
- * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
- * http://www.gnu.org/copyleft/gpl.html
- *
- * @file
- */
-
-use Wikimedia\Rdbms\IDatabase;
-
-/**
- * @deprecated Since 1.28 Use DataUpdate directly, injecting the database
- */
-abstract class SqlDataUpdate extends DataUpdate {
-	/** @var IDatabase Database connection reference */
-	protected $mDb;
-	/** @var array SELECT options to be used (array) */
-	protected $mOptions = [];
-
-	public function __construct() {
-		parent::__construct();
-
-		$this->mDb = wfGetLB()->getLazyConnectionRef( DB_MASTER );
-	}
-}
