@@ -61,6 +61,7 @@ changes to languages because of Phabricator reports.
 * EditPage::isOouiEnabled() was removed (deprecated in 1.30).
 * mw.util.wikiGetlink() was removed (deprecated in 1.23).
   Use mw.util.getUrl() instead.
+* The SqlDataUpdate class, deprecated in 1.28, has been removed.
 
 === Deprecations in 1.32 ===
 * Use of a StartProfiler.php file is deprecated in favour of placing
